--- a/index.html
+++ b/index.html
@@ -2,16 +2,30 @@
 <html>
 <head>
 	<title>The Publik Library</title>
+<style type="text/css">
+	#pl-logo{
+		width: 30%; 
+		margin-left: 35%; 
+		margin-top: 5%; 
+	}
+p{
+	text-align: center;
+	font-family: courier; 
+}
+</style>
+
 </head>
 <body>
-<img src="images/pl-logo.png">
+<img id="pl-logo" src="images/pl-logo.png">
+<p>
+	<br>
 
-The Publik Library 
-<br>
-<br>
-change
-<br>
-<br>
-another change 
+	The Stacks
+	<br><br>
+	The Book Fair
+	<br><br>
+	@publik.library
+	
+</p>
 </body>
 </html>
