--- a/index.html
+++ b/index.html
@@ -97,6 +97,12 @@ li{
 	  margin-bottom: 20%; 
 		
 	}
+	#pl-logo{
+		margin-top: 5%;  
+		/*margin-left: 5%;*/
+		/*margin-left: 35%; */
+		/*margin-top: 5%; */
+	}
 	.none{
 		display: none; 
 	}
@@ -154,7 +160,7 @@ li{
 	<li class="last content" >
 		The Publik Library is a shared initiative by School, Educated Guess, and Research + Development.		
 	</li>
-	<li class="mobile-only"><a href="https://www.instagram.com/publik.library/" target="_blank">@publik.library</a><br><br></li>
+	<span class="mobile-only"><a href="https://www.instagram.com/publik.library/" target="_blank">@publik.library</a><br><br></span>
 
 	<!-- row 03 -->
 
