--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ li{
 <ul>
 <!-- row 01 -->
 
-	<li class="first"><img id="pl-logo" src="images/pl-logo-01.png"></li>
+	<li class="first"><img id="pl-logo" src="images/pl-logo-00.png"></li>
 	<li class="none"><br></li>
 	<li class="none"><br></li>
 	<li class="last none"><a href="https://www.instagram.com/publik.library/" target="_blank">@publik.library</a><br><br></li>
@@ -205,7 +205,7 @@ li{
 
 	<!-- row 03 -->
 
-	<li>
+	<li class="first">
 		<br><br>
 		©(Y)ours 2020
 	</li>
