--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@ a{
 		text-decoration: none; 
 		color: black;
 		border-bottom:  solid black  1px; 
-		
-		/*background-color: yellow;  */
+
+		background-color: white;  
 	}
 	a:hover {
 	  background-color: yellow;
@@ -245,7 +245,7 @@ text-align: justify;
 		<a href="">Visit The Stacks</a>
 	</li>
 	<li class="content">
-		<a href=""><span class="title">The Book Fair - 001</a></span><br>
+		<a href=""><span class="title">The Book Fair </a></span><br>
 			<!-- – --><br>
 		April 26th, 2-6PM EST <svg height="9" width="9" class="blinking">
   <circle cx="5" cy="5" r="4" fill="red" />
@@ -256,14 +256,16 @@ text-align: justify;
 		<br><br>
 		<img id="" src="images/bf-01.png">
 		<br><br>
-		  The Book Fair is open and free to the public. The virtual nature of these events are partly fueled by the situation we find ourselves in, partly because using the power of the web helps democratize these talks. After the virtual event the talks will be archived on The Stacks in their respective folders. Our first group of speakers on April 26th will be the creative director of PLAYLAB Inc, <a href="https://www.instagram.com/publik.library/" target="_blank">Archie Lee Coates IV</a>, illustrator & art director <a href="https://www.instagram.com/publik.library/" target="_blank">Simone Noronha</a>, award winning curator and writer <a href="https://www.instagram.com/publik.library/" target="_blank">Sara Raza</a>, and artist & partner at School - <a href="https://www.instagram.com/publik.library/" target="_blank">Andrew Herzog</a>.
+		  The Book Fair is open and free to the public. The virtual nature of these events are partly fueled by the situation we find ourselves in, partly because using the power of the web helps democratize these talks. After the virtual event the talks will be archived on The Stacks in their respective folders. Our first group of speakers on April 26th will be the creative director of PLAYLAB Inc, <a href="https://www.playlab.org/" target="_blank">Archie Lee Coates IV</a>, illustrator & art director <a href="https://simonenoronha.com/" target="_blank">Simone Noronha</a>, award winning curator and writer <a href="https://sararaza.com/" target="_blank">Sara Raza</a>, and artist & partner at School - <a href="http://andrewherzog.com/" target="_blank">Andrew Herzog</a>.
 		<br><br> 
 		<a href="">RSVP for The Book Fair </a>				
 	</li>
 	<li class="last content" >
 		The Publik Library is a collaborative initiative by School, Educated Guess, and Research + Development.<br>
 		–<br><br>
-		<span class=""><a href="https://www.instagram.com/publik.library/" target="_blank">@publik.library</a><br><br></span>		
+		<span class=""><a href="https://www.instagram.com/publik.library/" target="_blank">@publik.library</a>
+			<br><br>the.publik.library@gmail.com
+			<br><br></span>		
 	</li>
 	
 
