--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ a{
 		color: black;
 		border-bottom:  solid black  1px; 
 
-		background-color: white;  
+/*		background-color: white;  */
 	}
 	a:hover {
 	  background-color: yellow;
@@ -162,6 +162,7 @@ a{
 	  -ms-hyphens: auto;
 	  hyphens: auto;
 		  text-align: justify;
+
 	}
 	.content{
 		min-height: 110vh; 
@@ -175,6 +176,9 @@ a{
 	}
 	.mobile-only{
 		display: none; 
+	}
+	.end-line{
+		font-size: .9vw; 
 	}
 
 }
@@ -243,6 +247,8 @@ text-align: justify;
 		Those “things” are organized into folders bearing the names of creatives who’ve filled them with the inputs and inspirations that have had a significant impact on their lives. These folders are open to the public for anyone to dig through. Their content can act as a catalyst for inquiry and learning. The goal is to create an ever evolving depository of inputs that can offer an ever growing source of insights for young creatives and life long students. 
 		<br><br> 
 		<a href="">Visit The Stacks</a>
+		<br><br> 
+		<span class="end-line">-------------------------------------</span>
 	</li>
 	<li class="content">
 		<a href=""><span class="title">The Book Fair </a></span><br>
@@ -258,14 +264,25 @@ text-align: justify;
 		<br><br>
 		  The Book Fair is open and free to the public. The virtual nature of these events are partly fueled by the situation we find ourselves in, partly because using the power of the web helps democratize these talks. After the virtual event the talks will be archived on The Stacks in their respective folders. Our first group of speakers on April 26th will be the creative director of PLAYLAB Inc, <a href="https://www.playlab.org/" target="_blank">Archie Lee Coates IV</a>, illustrator & art director <a href="https://simonenoronha.com/" target="_blank">Simone Noronha</a>, award winning curator and writer <a href="https://sararaza.com/" target="_blank">Sara Raza</a>, and artist & partner at School - <a href="http://andrewherzog.com/" target="_blank">Andrew Herzog</a>.
 		<br><br> 
-		<a href="">RSVP for The Book Fair </a>				
+		<a href="">RSVP for The Book Fair </a>	
+		<br><br> 
+		<span class="end-line">-------------------------------------</span>	
 	</li>
 	<li class="last content" >
+
+		<span class="end-line">-------------------------------------</span>
+		<br><br> 
 		The Publik Library is a collaborative initiative by School, Educated Guess, and Research + Development.<br>
-		–<br><br>
+		<br><br> 
+		<span class="end-line">-------------------------------------</span>
+		<br><br> 
 		<span class=""><a href="https://www.instagram.com/publik.library/" target="_blank">@publik.library</a>
+			<br><br> 
+		<span class="end-line">-------------------------------------</span>
 			<br><br>the.publik.library@gmail.com
-			<br><br></span>		
+
+			<br><br> 
+		<span class="end-line">-------------------------------------</span>	
 	</li>
 	
 
@@ -273,7 +290,7 @@ text-align: justify;
 
 	<li class="first">
 		<br><br>
-		©(Y)ours 2020
+		
 	</li>
 	<li class="none"><br></li>
 	<li class="none"><br></li>
@@ -281,6 +298,6 @@ text-align: justify;
 
 
 </ul>
-<p id="copyright"> </p>
+<p id="copyright"> ©(Y)ours 2020</p>
 </body>
 </html>
