--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@ a{
 	}
 	.end-line{
 		font-size: .9vw; 
+		color: grey; 
 	}
 
 }
@@ -206,6 +207,10 @@ text-align: justify;
 	}
 	.none{
 		display: none; 
+	}
+	.end-line{
+		font-size: 4vw; 
+		color: grey; 
 	}
 }
 
@@ -270,8 +275,7 @@ text-align: justify;
 	</li>
 	<li class="last content" >
 
-		<span class="end-line">-------------------------------------</span>
-		<br><br> 
+		
 		The Publik Library is a collaborative initiative by School, Educated Guess, and Research + Development.<br>
 		<br><br> 
 		<span class="end-line">-------------------------------------</span>
