--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ time, mark, audio, video {
 		font-family: courier-new;
 		margin: 0px; 
 		overflow-x: hidden;
-		background-color: #F6F6F6; 
+		background-color: #F2EEEB; 
 		line-height: 19px; 
 	}
 	@font-face {
@@ -276,7 +276,7 @@ text-align: justify;
 	<li class="last content" >
 
 		
-		The Publik Library is a collaborative initiative by School, Educated Guess, and Research + Development.<br>
+		The Publik Library is a collaborative initiative by <a href="http://andrewherzog.com/" target="_blank">School</a>, <a href="http://andrewherzog.com/" target="_blank">Educated Guess</a>, and <a href="http://andrewherzog.com/" target="_blank">Research + Development</a>.<br>
 		<br><br> 
 		<span class="end-line">-------------------------------------</span>
 		<br><br> 
