--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ text-align: justify;
 <!-- row 02 -->
 	<li class="content first none"><br></li>
 	<li class="content">
-		<a href=""><span class="title">The Stacks</span></a><br>
+		<a href="https://drive.google.com/drive/folders/1J4O2DzwnS-muHgtJOtoZWUpnSfGTU-g_?usp=sharing"><span class="title">The Stacks</span></a><br>
 		<!-- – --><br><br>
 		The Stacks exists as a public archive of the things (books, films, artworks, lectures, places, people, etc, etc) that have shaped the paths of top working creatives. 
 		<br><br>
@@ -251,7 +251,7 @@ text-align: justify;
 		<br><br>
 		Those “things” are organized into folders bearing the names of creatives who’ve filled them with the inputs and inspirations that have had a significant impact on their lives. These folders are open to the public for anyone to dig through. Their content can act as a catalyst for inquiry and learning. The goal is to create an ever evolving depository of inputs that can offer an ever growing source of insights for young creatives and life long students. 
 		<br><br> 
-		<a href="">Visit The Stacks</a>
+		<a href="https://drive.google.com/drive/folders/1J4O2DzwnS-muHgtJOtoZWUpnSfGTU-g_?usp=sharing">Visit The Stacks</a>
 		<br><br> 
 		<span class="end-line">-------------------------------------</span>
 	</li>
