--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@ time, mark, audio, video {
 img{
 	width: 100%; 
 }
+video{
+	width: 100%; 
+}
 li img{
 	width: 100%; 
 }
@@ -69,6 +72,7 @@ a{
 		text-decoration: none; 
 		color: black;
 		border-bottom:  solid black  1px; 
+		cursor: pointer;
 
 /*		background-color: white;  */
 	}
@@ -247,7 +251,10 @@ text-align: justify;
 		<!-- – --><br><br>
 		The Stacks exists as a public archive of the things (books, films, artworks, lectures, places, people, etc, etc) that have shaped the paths of top working creatives. 
 		<br><br>
-		<img id="" src="images/stacks-01.jpg">
+		<video  autoplay loop muted> 
+		  <source src="images/stacks-01.mov" type="video/mp4">		  
+		</video>
+		<!-- <img id="" src="images/stacks-01.jpg"> -->
 		<br><br>
 		Those “things” are organized into folders bearing the names of creatives who’ve filled them with the inputs and inspirations that have had a significant impact on their lives. These folders are open to the public for anyone to dig through. Their content can act as a catalyst for inquiry and learning. The goal is to create an ever evolving depository of inputs that can offer an ever growing source of insights for young creatives and life long students. 
 		<br><br> 
@@ -265,7 +272,10 @@ text-align: justify;
 		<!-- – --><br><br>
 		The Book Fair is a quarterly lecture series where selected contributors to The Stacks talk about the inputs and inspirations that have had a significant impact on their lives and careers.
 		<br><br>
-		<img id="" src="images/bf-01.png">
+		<video  autoplay loop muted> 
+		  <source src="images/book-fair-01.mp4" type="video/mp4">		  
+		</video>
+		<!-- <img id="" src="images/bf-01.png"> -->
 		<br><br>
 		  The Book Fair is open and free to the public. The virtual nature of these events are partly fueled by the situation we find ourselves in, partly because using the power of the web helps democratize these talks. After the virtual event the talks will be archived on The Stacks in their respective folders. Our first group of speakers on April 26th will be the creative director of PLAYLAB Inc, <a href="https://www.playlab.org/" target="_blank">Archie Lee Coates IV</a>, illustrator & art director <a href="https://simonenoronha.com/" target="_blank">Simone Noronha</a>, award winning curator and writer <a href="https://sararaza.com/" target="_blank">Sara Raza</a>, and artist & partner at School - <a href="http://andrewherzog.com/" target="_blank">Andrew Herzog</a>.
 		<br><br> 
@@ -304,4 +314,4 @@ text-align: justify;
 </ul>
 <p id="copyright"> ©(Y)ours 2020</p>
 </body>
-</html>
+</html>	
