--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ text-align: justify;
 		<!-- – --><br><br>
 		The Stacks exists as a public archive of the things (books, films, artworks, lectures, places, people, etc, etc) that have shaped the paths of top working creatives. 
 		<br><br>
-		<video  autoplay loop muted> 
+		<video playsinline  autoplay loop muted> 
 		  <source src="images/stacks-01.mov" type="video/mp4">		  
 		</video>
 		<!-- <img id="" src="images/stacks-01.jpg"> -->
@@ -272,14 +272,14 @@ text-align: justify;
 		<!-- – --><br><br>
 		The Book Fair is a quarterly lecture series where selected contributors to The Stacks talk about the inputs and inspirations that have had a significant impact on their lives and careers.
 		<br><br>
-		<video  autoplay loop muted> 
+		<video playsinline  autoplay loop muted> 
 		  <source src="images/book-fair-01.mp4" type="video/mp4">		  
 		</video>
 		<!-- <img id="" src="images/bf-01.png"> -->
 		<br><br>
 		  The Book Fair is open and free to the public. The virtual nature of these events are partly fueled by the situation we find ourselves in, partly because using the power of the web helps democratize these talks. After the virtual event the talks will be archived on The Stacks in their respective folders. Our first group of speakers on April 26th will be the creative director of PLAYLAB Inc, <a href="https://www.playlab.org/" target="_blank">Archie Lee Coates IV</a>, illustrator & art director <a href="https://simonenoronha.com/" target="_blank">Simone Noronha</a>, award winning curator and writer <a href="https://sararaza.com/" target="_blank">Sara Raza</a>, and artist & partner at School - <a href="http://andrewherzog.com/" target="_blank">Andrew Herzog</a>.
 		<br><br> 
-		<a href="">RSVP for The Book Fair </a>	
+		<a href="https://hopin.to/events/the-book-fair" target="_blank">RSVP for The Book Fair </a>	
 		<br><br> 
 		<span class="end-line">-------------------------------------</span>	
 	</li>
