--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ text-align: justify;
 		The Stacks exists as a public archive of the things (books, films, artworks, lectures, places, people, etc, etc) that have shaped the paths of top working creatives. 
 		<br><br>
 		<video playsinline  autoplay loop muted> 
-		  <source src="images/stacks-01.mov" type="video/mp4">		  
+		  <source src="images/stacks-01.mp4" type="video/mp4">		  
 		</video>
 		<!-- <img id="" src="images/stacks-01.jpg"> -->
 		<br><br>
