--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ li img{
 	.title{
 		/*background-color: black; 
 		color: white; */
-
+		border-bottom:  solid black  1px; 
 	}
 
 p{
@@ -247,7 +247,7 @@ text-align: justify;
 <!-- row 02 -->
 	<li class="content first none"><br></li>
 	<li class="content">
-		<a href="https://drive.google.com/drive/folders/1J4O2DzwnS-muHgtJOtoZWUpnSfGTU-g_?usp=sharing"><span class="title">The Stacks</span></a><br>
+		<!-- <a href="https://drive.google.com/drive/folders/1J4O2DzwnS-muHgtJOtoZWUpnSfGTU-g_?usp=sharing"> --><span class="title">The Stacks</span><!-- </a> --><br>
 		<!-- – --><br><br>
 		The Stacks exists as a public archive of the things (books, films, artworks, lectures, places, people, etc, etc) that have shaped the paths of top working creatives. 
 		<br><br>
@@ -258,16 +258,16 @@ text-align: justify;
 		<br><br>
 		Those “things” are organized into folders bearing the names of creatives who’ve filled them with the inputs and inspirations that have had a significant impact on their lives. These folders are open to the public for anyone to dig through. Their content can act as a catalyst for inquiry and learning. The goal is to create an ever evolving depository of inputs that can offer an ever growing source of insights for young creatives and life long students. 
 		<br><br> 
-		<a href="https://drive.google.com/drive/folders/1J4O2DzwnS-muHgtJOtoZWUpnSfGTU-g_?usp=sharing">Visit The Stacks</a>
+		The Stacks will open on 04.26
+		<!-- <a href="https://drive.google.com/drive/folders/1J4O2DzwnS-muHgtJOtoZWUpnSfGTU-g_?usp=sharing">Visit The Stacks</a> -->
 		<br><br> 
-		<span class="end-line">-------------------------------------</span>
+		<!-- <span class="end-line">-------------------------------------</span> -->
 	</li>
 	<li class="content">
-		<a href=""><span class="title">The Book Fair </a></span><br>
-			<!-- – --><br>
-		April 26th, 2-6PM EST <svg height="9" width="9" class="blinking">
+		<a href="https://hopin.to/events/the-book-fair" target="_blank"><span class="title">The Book Fair</a></span>
+		  (04.26, 2-6PM EST <svg height="9" width="9" class="blinking">
   <circle cx="5" cy="5" r="4" fill="red" />
-</svg> <br>
+</svg>) <br>
 		
 		<!-- – --><br><br>
 		The Book Fair is a quarterly lecture series where selected contributors to The Stacks talk about the inputs and inspirations that have had a significant impact on their lives and careers.
@@ -277,26 +277,26 @@ text-align: justify;
 		</video>
 		<!-- <img id="" src="images/bf-01.png"> -->
 		<br><br>
-		  The Book Fair is open and free to the public. The virtual nature of these events are partly fueled by the situation we find ourselves in, partly because using the power of the web helps democratize these talks. After the virtual event the talks will be archived on The Stacks in their respective folders. Our first group of speakers on April 26th will be the creative director of PLAYLAB Inc, <a href="https://www.playlab.org/" target="_blank">Archie Lee Coates IV</a>, illustrator & art director <a href="https://simonenoronha.com/" target="_blank">Simone Noronha</a>, award winning curator and writer <a href="https://sararaza.com/" target="_blank">Sara Raza</a>, and artist & partner at School - <a href="http://andrewherzog.com/" target="_blank">Andrew Herzog</a>.
+		  The Book Fair is open and free to the public. The virtual nature of these events are partly fueled by the situation we find ourselves in, partly because using the power of the web helps democratize these talks. After the virtual event the talks will be archived on The Stacks in their respective folders. Our first group of speakers on April 26th will be the partner at PLAYLAB Inc, <a href="https://www.playlab.org/" target="_blank">Archie Lee Coates IV</a>, illustrator & art director <a href="https://simonenoronha.com/" target="_blank">Simone Noronha</a>, award winning curator and writer <a href="https://sararaza.com/" target="_blank">Sara Raza</a>, and artist & partner at School - <a href="http://andrewherzog.com/" target="_blank">Andrew Herzog</a>.
 		<br><br> 
 		<a href="https://hopin.to/events/the-book-fair" target="_blank">RSVP for The Book Fair </a>	
 		<br><br> 
-		<span class="end-line">-------------------------------------</span>	
+		<!-- <span class="end-line">-------------------------------------</span>	 -->
 	</li>
 	<li class="last content" >
-
-		
+<br><br> 
+		<br> 
 		The Publik Library is a collaborative initiative by <a href="http://schoooool.com/" target="_blank">School</a>, <a href="http://andrewherzog.com/" target="_blank">Educated Guess</a>, and <a href="http://r-d.info/" target="_blank">Research + Development</a>.<br>
 		<br><br> 
-		<span class="end-line">-------------------------------------</span>
-		<br><br> 
+		<!-- <span class="end-line">-------------------------------------</span>
+		<br><br>  -->
 		<span class=""><a href="https://www.instagram.com/publik.library/" target="_blank">@publik.library</a>
 			<br><br> 
-		<span class="end-line">-------------------------------------</span>
+		<!-- <span class="end-line">-------------------------------------</span> -->
 			<br><br>the.publik.library@gmail.com
-
+<!-- 
 			<br><br> 
-		<span class="end-line">-------------------------------------</span>	
+		<span class="end-line">-------------------------------------</span>	 -->
 	</li>
 	
 
